# ValidKit

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  example.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  cleanup-preview-docs.yml  deploy-docs.yml  native-core.yml  preview-docs.yml  security.yml
benchmarks/: README.md  benchmark_validation.py
docs/: 404.html  api.html  async.html  best_practices.html  changelog.html  compile.html  core.html  encryption.html  error_handling.html  exceptions.html  guide.html  hashmap.json  index.html  index.md  patterns.html  performance.html  performance_roadmap.md  transactions.html  tutorial.html  validation.html
docs/assets/: api.md.C0URtPym.js  api.md.C0URtPym.lean.js  app.EKtEI2j3.js  async.md.CSJflJkX.js  async.md.CSJflJkX.lean.js  best_practices.md.CUfC6Vh2.js  best_practices.md.CUfC6Vh2.lean.js  changelog.md.Da65Yjy-.js  changelog.md.Da65Yjy-.lean.js  compile.md.CU1xIDdh.js  compile.md.CU1xIDdh.lean.js  core.md.ksuChm7B.js  core.md.ksuChm7B.lean.js  en_api.md.DFfA0V0V.js  en_api.md.DFfA0V0V.lean.js  en_async.md.oWjqo49s.js  en_async.md.oWjqo49s.lean.js  en_best_practices.md.DvvbQbGl.js  en_best_practices.md.DvvbQbGl.lean.js  en_changelog.md.Oq9Emrll.js  en_changelog.md.Oq9Emrll.lean.js  en_compile.md.IZ_Fef64.js  en_compile.md.IZ_Fef64.lean.js  en_core.md.BIay3qtB.js  en_core.md.BIay3qtB.lean.js  (+39 more)
docs/en/: README.md  (+16 more)
docs_old/: index.md
examples/: compiled_validation.py
scripts/: build-test-install.ps1  build-test-install.sh  gen_api_docs.py  scan.py
src/validkit_core/: Cargo.toml  README.md  pyproject.toml
src/validkit_core/src/: lib.rs
tests/: conftest.py  test_advanced_features.py  test_class_schema.py  test_coercion.py  test_compile.py  test_features_v120.py  test_new_improvements.py  test_new_validators.py  test_validkit.py
(+271 files in other folders)
