[package]
name = "validkit-core"
version = "0.1.0"
edition = "2021"
description = "Experimental Rust validation core for ValidKit."
license = "MIT"

[lib]
name = "validkit_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
