[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "validkit-py-core"
dynamic = ["version"]
description = "Optional native validation core for ValidKit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Disnana", email = "support@disnana.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/disnana/ValidKit"
Documentation = "https://validkit.disnana.com/core"
Source = "https://github.com/disnana/ValidKit"

[tool.maturin]
module-name = "validkit_core"
strip = true
